<resources>
    <string name="app_name" translatable="false">bellidoserranadrianapmdm03</string>

    <string name="pokedex_view_card_view_image_description">Pokedex icon</string>
    <string name="captured_pokemon_view_card_view_image_description">Character image</string>
    <string name="pokedex_recycler_view_card_view_title">Card view title</string>
    <string name="settings_title">SETTINGS</string>
    <string name="settings_logout">Log out</string>
    <string name="bottom_nav_menu_captured_pokemon">My pokemons</string>
    <string name="bottom_nav_menu_pokedex">Pokedex</string>
    <string name="bottom_nav_menu_settings">Settings</string>

    <!-- Pokemon captured -->
    <string name="pokemon_captured_pokemon_id" translatable="false">#%1$s</string>
    <string name="pokemon_captured_height_unit" translatable="false">cm</string>
    <string name="pokemon_captured_weight_unit" translatable="false">kg</string>

    <string name="pokemon_captured_height">Height:</string>
    <string name="pokemon_captured_weight">Weight:</string>
    <string name="pokemon_captured_types_title">Type(s):</string>

    <!-- Pokemon detail -->
    <string name="pokemon_detail_height_unit" translatable="false">cm</string>
    <string name="pokemon_detail_weight_unit" translatable="false">kg</string>

    <string name="pokemon_detail_height">Height</string>
    <string name="pokemon_detail_weight">Weight</string>
    <string name="pokemon_detail_types_title">Type(s)</string>
    <string name="settings_about_me">About me…</string>
    <string name="settings_delete_pokemon_switch">Delete my pokemon</string>
    <string name="settings_language">Language</string>
    <string name="menu_selectable_spanish">Spanish</string>
    <string name="menu_selectable_english">English</string>

    <!-- Context menu -->
    <string name="context_menu_about_me">About me…</string>
    <string name="context_menu_alert_dialog_text">App developed by Adriana Bellido Serran 1.0.</string>
    <string name="context_menu_neutral_button">Close</string>
    <string name="context_menu_log_out_text">Are you sure you want to log out?</string>
    <string name="context_menu_log_out_positive_button">Yes</string>
    <string name="context_menu_log_out_negative_button">No</string>

</resources>