<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.PokemonDetailFragment">

    <ImageView
        android:id="@+id/iv_pokemon_detail_pokemon_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/bulbasaur" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_pokemon_detail_pokemon_img">

        <TextView
            android:id="@+id/tv_pokemon_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            tools:text="Bulbasaur" />

        <TextView
            android:id="@+id/tv_pokemon_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_vertical_margin"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="@+id/left_padding"
            app:layout_constraintTop_toBottomOf="@+id/poke_img"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_vertical_margin">

            <ImageView
                android:id="@+id/iv_pokemon_detail_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_horizontal_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_height" />

            <TextView
                android:id="@+id/tv_pokemon_detail_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_detail_height"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintEnd_toStartOf="@+id/tv_pokemon_detail_height_amount"
                app:layout_constraintStart_toStartOf="@id/iv_pokemon_detail_height"
                app:layout_constraintTop_toBottomOf="@id/iv_pokemon_detail_height" />

            <TextView
                android:id="@+id/tv_pokemon_detail_height_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textSize="@dimen/body_text_large"
                app:layout_constraintBottom_toBottomOf="@+id/iv_pokemon_detail_height"
                app:layout_constraintStart_toEndOf="@+id/iv_pokemon_detail_height"
                app:layout_constraintTop_toTopOf="@+id/iv_pokemon_detail_height"
                tools:text="70" />

            <TextView
                android:id="@+id/tv_pokemon_detail_height_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/extra_small_horizontal_margin"
                android:text="@string/pokemon_detail_height_unit"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintBottom_toBottomOf="@+id/iv_pokemon_detail_height"
                app:layout_constraintEnd_toStartOf="@+id/iv_pokemon_detail_weight"
                app:layout_constraintStart_toEndOf="@+id/tv_pokemon_detail_height_amount"
                app:layout_constraintTop_toTopOf="@+id/iv_pokemon_detail_height" />

            <ImageView
                android:id="@+id/iv_pokemon_detail_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/extra_large_horizontal_margin"
                app:layout_constraintStart_toEndOf="@+id/tv_pokemon_detail_height_unit"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_weight" />

            <TextView
                android:id="@+id/tv_pokemon_detail_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_detail_weight"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintEnd_toStartOf="@+id/tv_pokemon_detail_weight_amount"
                app:layout_constraintStart_toStartOf="@id/iv_pokemon_detail_weight"
                app:layout_constraintTop_toBottomOf="@id/iv_pokemon_detail_weight" />

            <TextView
                android:id="@+id/tv_pokemon_detail_weight_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textSize="@dimen/body_text_large"
                app:layout_constraintBottom_toBottomOf="@+id/iv_pokemon_detail_weight"
                app:layout_constraintStart_toEndOf="@+id/iv_pokemon_detail_weight"
                app:layout_constraintTop_toTopOf="@+id/iv_pokemon_detail_weight"
                tools:text="6,9" />

            <TextView
                android:id="@+id/tv_pokemon_detail_weight_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/extra_small_horizontal_margin"
                android:text="@string/pokemon_detail_weight_unit"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintBottom_toBottomOf="@+id/iv_pokemon_detail_weight"
                app:layout_constraintStart_toEndOf="@+id/tv_pokemon_detail_weight_amount"
                app:layout_constraintTop_toTopOf="@+id/iv_pokemon_detail_weight" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_pokemon_detail_types_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:text="@string/pokemon_detail_types_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="@+id/left_padding"
            app:layout_constraintTop_toBottomOf="@+id/poke_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pokemon_detail_type_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                tools:text="Grass" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pokemon_detail_type_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="false"
                android:focusable="false"
                tools:text="Poison" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>